fixed button overflow, height and width

--- a/style.css
+++ b/style.css
@@ -55,11 +55,12 @@ header {
   padding: 2rem 4rem;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   gap: 2rem;
   max-width: calc(100vw - 4rem);
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .type-selector {
     flex-direction: column;
     height: fit-content;
@@ -73,6 +74,9 @@ header {
   outline: none;
   display: flex;
   flex-direction: column;
+  width: 20rem;
+  max-width: 100%;
+  max-height: 100%;
   gap: .3rem;
   cursor: pointer;
   background-color: var(--accent);
@@ -84,6 +88,7 @@ header {
   align-items: center;
   gap: .5rem;
   font-size: 1.7rem;
+  color: black;
   padding: 1rem;
   transition: transform 100ms ease-out;
 }
